--- a/soda.html
+++ b/soda.html
@@ -7,6 +7,11 @@
     <title>Soda Cans</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <link rel="stylesheet" href="buttons.css">
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
