Improved dialogue for hamper and recycling

--- a/hamper.html
+++ b/hamper.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="buttons.css">
     <style>
         body {
-          background-color: black;
+            background-color: black;
         }
-      </style>
+    </style>
 </head>
 
 <body>
-    <button id="uh" style="display: none;">Uh, maybe another time...</button>
+    <button id="uh" style="display: none;">Seen any messes lately?</button>
     <button id="niceStart" style="display: none;">Think you could help with some laundry?</button>
     <button id="meanStart" style="display: none;">The socks...</button>
     <button id="sorry" style="display: none;">Sorry, what I meant to say was...</button>
@@ -90,7 +90,7 @@
 
             switch (convo) {
                 case 0:
-                    styledText("Hello", width / 2, height / 1.21);
+                    styledText("Howdy stranger!", width / 2, height / 1.21);
                     break;
                 case 1:
                     styledText("The what?", width / 2, height / 1.21);
@@ -111,7 +111,7 @@
                     styledText("Yea?", width / 2, height / 1.21);
                     break;
                 case 7:
-                    styledText("Alrighty", width / 2, height / 1.21);
+                    styledText("Nope, sorry!", width / 2, height / 1.21);
                     break;
                 default:
             }
