--- a/recycling.html
+++ b/recycling.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <button id="uh" style="display: none;">Uh, maybe another time...</button>
+    <button id="uh" style="display: none;">Oops, sorry I'll leave you be</button>
     <button id="niceStart" style="display: none;">Nice hat</button>
     <button id="meanStart" style="display: none;">Oh brother...</button>
     <button id="sorry" style="display: none;">I haven't said anything yet</button>
