--- a/dust.html
+++ b/dust.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="buttons.css">
     <style>
         body {
-          background-color: black;
+            background-color: black;
         }
-      </style>
+    </style>
 </head>
 
 <body>
@@ -128,6 +128,8 @@
                         bunny.y = random(height);
                     }
                 }
+                styledText("Jeez this shelf is dusty", width / 2, height / 2.7, 80);
+                styledText("I'll need some help to dust this...", width / 2, height / 2.12, 80);
                 document.getElementById("returnButton").style.display = "block";
 
             } else {
@@ -139,7 +141,7 @@
                     image(duster, width / 2 + 100 * scale, height / 2 - 950 * scale, duster.width * scale, duster.height * scale);
                     pop();
 
-                    styledText("All Clean!", width / 2 + 10 * scale, height / 2);
+                    styledText("All Clean!", width / 2 + 10 * scale, height / 2, 130);
 
                     localStorage.setItem('dusterCheck', '2');
                     document.getElementById("returnButton").style.display = "block";
@@ -227,10 +229,10 @@
             }
         }
 
-        function styledText(string, x, y) {
+        function styledText(string, x, y, size) {
             stroke(0, 0, 0);
             strokeWeight(4);
-            sizeOfText = 130 * scale;
+            sizeOfText = size * scale;
             textSize(sizeOfText);
             textStyle(BOLD);
             textAlign(CENTER);
