Found the reason for the bug with laundry game

--- a/laundry.html
+++ b/laundry.html
@@ -330,7 +330,7 @@
 
         // Mouse functions for aiming and shooting
         function mousePressed() {
-            if (!socks[0].inAir && hamperCheck != '0') {
+            if (!socks[0].inAir && hamperCheck > '0') {
                 isAiming = true;
             }
         }
