--- a/soda.html
+++ b/soda.html
@@ -16,6 +16,8 @@
 
 <body>
     <button id="returnButton">Return to Room</button>
+    <button id="start">Continue</button>
+
     <script>
         var recycleCheck = localStorage.getItem('recycleCheck');
         if (recycleCheck === '-1') {
@@ -157,6 +159,7 @@
             background(circus); // set the background every frame
 
             if (recycleCheck <= '0') {
+                document.getElementById("start").style.display = "none";
                 image(cannonImg, cannon.left, cannon.top, cannon.width, cannon.height);
                 sodasToDisplay.forEach(soda => {
                     sodaMovement(soda);
@@ -170,7 +173,18 @@
                 styledText("A bunch of empty cans.", width / 2, height / 2.7, 80);
                 styledText("I'll need some help to recycle these...", width / 2, height / 2.12, 80);
                 document.getElementById("returnButton").style.display = "block";
-            } else {
+            }
+            else if (recycleCheck === '1') {
+                image(cannonImg, cannon.left, cannon.top, cannon.width, cannon.height);
+                styledText("Catch the falling soda cans!", width / 2, height / 2.7, 80);
+                styledText("Move your cursor left and right", width / 2, height / 2.1, 80);
+                styledText("to control the recycling bin!", width / 2, height / 1.71, 80);
+                document.getElementById("start").style.display = "block";
+                document.getElementById("returnButton").style.display = "none";
+
+            }
+            else {
+                document.getElementById("start").style.display = "none";
                 document.getElementById("returnButton").style.display = "none";
                 if (sodas.length < 1) {
                     image(cannonImg, cannon.left, cannon.top, cannon.width, cannon.height);
@@ -314,12 +328,27 @@
             const canvasRect = canvas.getBoundingClientRect();
             returnButton.style.top = `${canvasY + height / 1.2}px`;
             returnButton.style.left = `${canvasX + width / 2}px`;
+
+            const startButton = document.getElementById('start');
+            startButton.style.top = `${canvasY + height / 1.2}px`;
+            startButton.style.left = `${canvasX + width / 2}px`;
+            if (recycleCheck === '1') {
+                document.getElementById('start').style.display = 'none';
+            }
         };
 
         document.addEventListener("DOMContentLoaded", function () {
             var returnButton = document.getElementById('returnButton');
             returnButton.addEventListener('click', function () {
                 window.location.href = 'room.html';
+            });
+        });
+
+        document.addEventListener("DOMContentLoaded", function () {
+            var startButton = document.getElementById('start');
+            startButton.addEventListener('click', function () {
+                localStorage.setItem('recycleCheck', '2');
+                window.location.href = 'soda.html';
             });
         });
 
