Custom cursor added

--- a/duster.html
+++ b/duster.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="buttons.css">
     <style>
         body {
-          background-color: black;
+            background-color: black;
+            cursor: url('sprites/room/cursor1.png'), auto;
         }
-      </style>
+
+        button:hover {
+            cursor: url('sprites/room/cursor2.png'), auto;
+        }
+    </style>
 </head>
 
 <body>
