--- a/recycling.html
+++ b/recycling.html
@@ -10,6 +10,11 @@
     <style>
         body {
             background-color: black;
+            cursor: url('sprites/room/cursor1.png'), auto;
+        }
+
+        button:hover {
+            cursor: url('sprites/room/cursor2.png'), auto;
         }
     </style>
 </head>
@@ -53,8 +58,7 @@
             positionButtons();
             if (recycleCheck === '-1') {
                 showButtons(['uh']);
-            }
-            else {
+            } else {
                 showButtons(['niceStart', 'meanStart']);
             }
         }
