--- a/dust.html
+++ b/dust.html
@@ -10,6 +10,12 @@
     <style>
         body {
             background-color: black;
+            cursor: url('sprites/room/cursor1.png'), auto;
+        }
+
+        #start:hover,
+        #returnButton:hover {
+            cursor: url('sprites/room/cursor2.png'), auto;
         }
     </style>
 </head>
@@ -135,16 +141,14 @@
                 styledText("I'll need some help to dust this...", width / 2, height / 2.12, 80);
                 document.getElementById("returnButton").style.display = "block";
 
-            }
-            else if (dusterCheck === '1') {
+            } else if (dusterCheck === '1') {
                 styledText("Dust off the bookshelf!", width / 2, height / 2.7, 80);
                 styledText("Press and hold your mouse to use duster", width / 2, height / 2.1, 80);
                 styledText("Dust all the bunnies off screen!", width / 2, height / 1.71, 80);
                 document.getElementById("start").style.display = "block";
                 document.getElementById("returnButton").style.display = "none";
 
-            }
-            else {
+            } else {
                 document.getElementById("start").style.display = "none";
 
                 // once every dust bunny has been sucked up, display text to say, "All clean!"
@@ -215,8 +219,7 @@
                     rotate(dusterAngle);
                     image(duster, -dusterSize / 3.5 - 60 * scale, -dusterSize * 3.5 - 160 * scale, dusterSize * 1.7, dusterSize * 4.5); // Position image relative to the new pivot
                     pop();
-                }
-                else {
+                } else {
                     document.getElementById("returnButton").style.display = "none";
                     // Mouse not being clicked/held
                     for (let i = dustBunnies.length - 1; i >= 0; i--) {
@@ -254,7 +257,6 @@
             fill(255);
             text(string, x, y);
         }
-
 
         // Check if bunny is still on screen
         function onScreen(bunny) {
@@ -294,7 +296,6 @@
                 window.location.href = 'dust.html';
             });
         });
-
     </script>
 </body>
 
