--- a/room.html
+++ b/room.html
@@ -10,6 +10,15 @@
     <style>
         body {
             background-color: black;
+            cursor: url('sprites/room/cursor1.png'), auto;
+        }
+
+        #start:hover {
+            cursor: url('sprites/room/cursor2.png'), auto;
+        }
+
+        #quit:hover {
+            cursor: url('sprites/room/cursor2.png'), auto;
         }
     </style>
 </head>
@@ -25,8 +34,7 @@
         let dusterCheck;
         if (localStorage.getItem('dusterCheck')) {
             dusterCheck = localStorage.getItem('dusterCheck');
-        }
-        else {
+        } else {
             localStorage.setItem('dusterCheck', '-1');
         }
 
@@ -47,8 +55,7 @@
         let tutorialCheck;
         if (localStorage.getItem('tutorialCheck')) {
             tutorialCheck = localStorage.getItem('tutorialCheck');
-        }
-        else {
+        } else {
             localStorage.setItem('tutorialCheck', '-1');
         }
 
@@ -152,7 +159,6 @@
             };
             recyling.right = recyling.left + recyling.width;
             recyling.bottom = recyling.top + recyling.height;
-
         }
 
         function draw() {
@@ -164,6 +170,7 @@
                 styledText('Well done! Your room is clean', width / 2, height / 1.5, 80);
                 styledText('(Let\'s see how long it lasts)', width / 2, height / 1.25, 80);
             }
+
             let mouseOverDuster = mouseX >= duster.left && mouseX <= duster.right && mouseY >= duster.top && mouseY <= duster.bottom;
             let mouseOverDust = mouseX >= dust.left && mouseX <= dust.right && mouseY >= dust.top && mouseY <= dust.bottom;
             let mouseOverHamper = mouseX >= hamper.left && mouseX <= hamper.right && mouseY >= hamper.top && mouseY <= hamper.bottom;
@@ -173,7 +180,7 @@
 
             if (dusterCheck != '2') {
                 if (dusterCheck <= '0') {
-                    if (mouseX >= duster.left && mouseX <= duster.right && mouseY >= duster.top && mouseY <= duster.bottom && tutorialCheck != '-1') {
+                    if (mouseOverDuster && tutorialCheck != '-1') {
                         tint(192, 255, 172);
                     }
                     push();
@@ -183,7 +190,7 @@
                     pop();
                     tint('none');
                 }
-                if (mouseX >= dust.left && mouseX <= dust.right && mouseY >= dust.top && mouseY <= dust.bottom && tutorialCheck != '-1') {
+                if (mouseOverDust && tutorialCheck != '-1') {
                     tint(192, 255, 172);
                 }
                 for (let i = 0; i < num; i++) {
@@ -194,13 +201,13 @@
 
             if (recycleCheck != '2') {
                 if (recycleCheck <= '0') {
-                    if (mouseX >= recyling.left && mouseX <= recyling.right && mouseY >= recyling.top && mouseY <= recyling.bottom && tutorialCheck != '-1') {
+                    if (mouseOverRecycling && tutorialCheck != '-1') {
                         tint(192, 255, 172);
                     }
                     image(recylingImg, recyling.left, recyling.top, recyling.width, recyling.height);
                 }
                 tint('none');
-                if (mouseX >= soda.left && mouseX <= soda.right && mouseY >= soda.top && mouseY <= soda.bottom && tutorialCheck != '-1') {
+                if (mouseOverSoda && tutorialCheck != '-1') {
                     tint(192, 255, 172);
                 }
                 image(sodaImg, soda.left, soda.top, soda.width, soda.height);
@@ -209,13 +216,13 @@
 
             if (hamperCheck != '2') {
                 if (hamperCheck <= '0') {
-                    if (mouseX >= hamper.left && mouseX <= hamper.right && mouseY >= hamper.top && mouseY <= hamper.bottom && tutorialCheck != '-1') {
+                    if (mouseOverHamper && tutorialCheck != '-1') {
                         tint(192, 255, 172);
                     }
                     image(hamperImg, hamper.left, hamper.top, hamper.width, hamper.height);
                 }
                 tint('none');
-                if (mouseX >= laundry.left && mouseX <= laundry.right && mouseY >= laundry.top && mouseY <= laundry.bottom && tutorialCheck != '-1') {
+                if (mouseOverLaundry && tutorialCheck != '-1') {
                     tint(192, 255, 172);
                 }
                 image(laundryImg, laundry.left, laundry.top, laundry.width, laundry.height);
@@ -227,12 +234,16 @@
                 styledText('Clean up your room!', width / 2, height / 1.5, 80);
                 styledText('Search for messes and allies!', width / 2, height / 1.25, 80);
             } else {
-                cursor(mouseOverDust && dusterCheck != '2' ||
+                if (mouseOverDust && dusterCheck != '2' ||
                     mouseOverDuster && dusterCheck <= '0' ||
                     mouseOverLaundry && hamperCheck != '2' ||
                     mouseOverHamper && hamperCheck <= '0' ||
                     mouseOverSoda && recycleCheck != '2' ||
-                    mouseOverRecycling && recycleCheck <= '0' ? HAND : ARROW);
+                    mouseOverRecycling && recycleCheck <= '0') {
+                    document.body.style.cursor = 'url("sprites/room/cursor2.png"), auto';
+                } else {
+                    document.body.style.cursor = 'url("sprites/room/cursor1.png"), auto';
+                }
             }
         }
 
