--- a/dust.html
+++ b/dust.html
@@ -36,7 +36,15 @@
         let dustBunnyImages = [];
         let dustBunnies = [];
 
+        let lastMouseX = 0;
+        let lastMouseY = 0;
+        let lastTime = 0;
+        let speedThreshold = 10;
+        let tooFast = false;
+        let halt = 0;
+
         let duster;
+        let dusterHuman;
         let dusterSize;
         let dusterDir = 1;
         let dusterAngle = 0;
@@ -60,6 +68,7 @@
                 dustBunnyImages.push(loadImage("sprites/enemies/dustBunny.png"));
             }
             duster = loadImage("sprites/room/dusterIRL.png");
+            dusterHuman = loadImage('sprites/characters/duster.png');
         }
 
         // setup the vectors of each bunny in the window
@@ -91,6 +100,10 @@
             mouseX = windowWidth / 2;
             mouseY = windowHeight / 2;
             positionButton();
+
+            lastMouseX = mouseX;
+            lastMouseY = mouseY;
+            lastTime = millis();
         }
 
         function windowResized() {
@@ -148,7 +161,7 @@
             } else if (dusterCheck === '1') {
                 styledText("Dust off the bookshelf!", width / 2, height / 2.7, 80);
                 styledText("Press and hold your mouse to use duster", width / 2, height / 2.1, 80);
-                styledText("Dust all the bunnies off screen!", width / 2, height / 1.71, 80);
+                styledText("Don't shake the duster too fast!", width / 2, height / 1.71, 80);
                 document.getElementById("start").style.display = "block";
                 document.getElementById("returnButton").style.display = "none";
 
@@ -170,7 +183,7 @@
                     localStorage.setItem('dusterCheck', '2');
                     document.getElementById("returnButton").style.display = "block";
 
-                } else if (mouseIsPressed) {
+                } else if (mouseIsPressed && !tooFast) {
                     document.getElementById("returnButton").style.display = "none";
                     for (let i = dustBunnies.length - 1; i >= 0; i--) {
                         let bunny = dustBunnies[i];
@@ -240,13 +253,45 @@
                         bunny.y += sin(a);
 
                         image(bunnyImage, bunny.x - bunnySize / 2, bunny.y - bunnySize / 2, bunnySize, bunnySize);
-                        image(duster, mouseX - dusterSize * 1.7 / 2, mouseY - dusterSize * 3.5 + 100 * scale, dusterSize * 1.7, dusterSize * 4.5);
-
+                        if (!tooFast) {
+                            image(duster, mouseX - dusterSize * 1.7 / 2, mouseY - dusterSize * 3.5 + 100 * scale, dusterSize * 1.7, dusterSize * 4.5);
+                        }
+                        
                         // If bunny goes off screen, respawn at a random spot
                         if (!onScreen(bunny)) {
                             bunny.x = random(width);
                             bunny.y = random(height);
                         }
+                    }
+                }
+                if (tooFast) {
+                    document.body.style.cursor = 'url("sprites/room/cursor1.png"), auto';
+                    image(dusterHuman, width - dusterHuman.width / 2 * scale, height - dusterHuman.height / 2.1 * scale, dusterHuman.width / 2 * scale, dusterHuman.height / 2 * scale);
+                    styledText("I'm gonna hurl...", width / 1.7, height / 1.3, 40);
+                    styledText("Slow down!", width / 1.7, height / 1.2, 40);
+                    halt += 0.007;
+                    if (halt >= 2) {
+                        tooFast = false;
+                        halt = 0;
+                    }
+                }
+                else {
+                    let currentTime = millis();
+                    let elapsedTime = currentTime - lastTime;
+                    if (elapsedTime > 0) {
+                        let dusterDistance = dist(mouseX, mouseY, lastMouseX, lastMouseY);
+                        let dusterSpeed = dusterDistance / elapsedTime;
+
+                        if (dusterSpeed > speedThreshold) {
+                            halt += .07;
+                            if (halt >= 1) {
+                                tooFast = true;
+                            }
+                        }
+
+                        lastMouseX = mouseX;
+                        lastMouseY = mouseY;
+                        lastTime = currentTime;
                     }
                 }
             }
